hphp/hack/test/typecheck/shape_type.php
<?hh

function f(): shape {
  // UNSAFE
}
